# src/models/index.ts
@@ -5,6 +5,7 @@ export * from './purchase.model';
 export * from './purchase_detail.model';
 export * from './transaction.model';
 export * from './transaction_detail.model';
+export * from './transaction_payment.model';
 export * from './uom.model';
 export * from './user.model';
 export * from './vendor.model';
